[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/tree_sets/A/top.png" type="Texture" id=1]
[ext_resource path="res://Assets/tree_sets/A/bottom.png" type="Texture" id=2]
[ext_resource path="res://Assets/tree_sets/A/stump.png" type="Texture" id=3]
[ext_resource path="res://World/Objects/TreeObject.gd" type="Script" id=4]
[ext_resource path="res://Assets/tree_sets/A/leaves.png" type="Texture" id=5]
[ext_resource path="res://Assets/tree_sets/A/chip.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.3008, 29.2031 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TreeHurtbox/treeHurtBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TreeSprites/TreeTop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TreeSprites/TreeTop:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TreeSprites/TreeBottom:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TreeSprites/TreeBottom:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TreeBreak:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -130, -8 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TreeBreak2:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TreeBreak2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -8 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "tree fall left"
length = 1.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, -90, -0.4, 85.1409, 0, 0 ),
"times": PoolRealArray( 0, 1.4 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TreeHurtbox/treeHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TreeSprites/TreeTop:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TreeBreak:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TreeSprites/TreeTop:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -24, 4 ), Vector2( -32, 4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TreeSprites/TreeBottom:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TreeBreak:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -120, -8 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TreeBreak2:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TreeBreak2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -120, -8 ), Vector2( -120, -8 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "tree fall right"
length = 1.4
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 90, -0.1, -65, 0, 0 ),
"times": PoolRealArray( 0, 1.4 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TreeHurtbox/treeHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TreeSprites/TreeTop:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TreeBreak:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TreeSprites/TreeTop:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 24, 4 ), Vector2( 32, -4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TreeSprites/TreeBottom:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.74 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TreeBreak:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -8 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TreeBreak2:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TreeBreak2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, -8 ), Vector2( 120, -8 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "tree hit left"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.0, 3.0, -2.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 1 ), Vector2( -2.25, 0.75 ), Vector2( 1.5, 0.5 ), Vector2( -0.75, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "tree hit right"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 4.0, -3.0, 2.0, -1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 1 ), Vector2( 2.25, 0.75 ), Vector2( -1.5, 0.5 ), Vector2( 0.75, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MovementCollisionBox2/movementCollisionBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TreeSprites/TreeStump:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TreeSprites/TreeStump:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "stump_destroyed"
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MovementCollisionBox2/movementCollisionBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TreeSprites/TreeStump:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "stump_hit_right"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( 2, 0 ), Vector2( -1, 0.5 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=15]
particles_animation = true
particles_anim_h_frames = 12
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=18]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="TreeObject" type="Node2D"]
script = ExtResource( 4 )

[node name="TreeSprites" type="Node2D" parent="."]

[node name="TreeStump" type="Sprite" parent="TreeSprites"]
texture = ExtResource( 3 )
offset = Vector2( 0, -120 )

[node name="TreeBottom" type="Sprite" parent="TreeSprites"]
texture = ExtResource( 2 )
offset = Vector2( 0, -120 )
region_rect = Rect2( 160, 320, 0, 0 )

[node name="TreeTop" type="Sprite" parent="TreeSprites"]
texture = ExtResource( 1 )
offset = Vector2( 0, -120 )

[node name="MovementCollisionBox2" type="StaticBody2D" parent="."]
position = Vector2( 0, -20 )

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox2"]
position = Vector2( -3.2, 32.8 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="StumpHurtBox" type="Area2D" parent="."]
position = Vector2( 0, -20 )
collision_layer = 8
collision_mask = 8

[node name="stumpHurtBox" type="CollisionShape2D" parent="StumpHurtBox"]
position = Vector2( -3.2, 32.8 )
rotation = -1.5708
shape = SubResource( 1 )
disabled = true

[node name="TreeHurtbox" type="Area2D" parent="."]
position = Vector2( 0, -20 )
collision_layer = 8
collision_mask = 8

[node name="treeHurtBox" type="CollisionShape2D" parent="TreeHurtbox"]
position = Vector2( -3.2, 32.8 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="TreeAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
"anims/tree fall left" = SubResource( 16 )
"anims/tree fall right" = SubResource( 8 )
"anims/tree hit left" = SubResource( 17 )
"anims/tree hit right" = SubResource( 10 )

[node name="StumpAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/stump_destroyed = SubResource( 13 )
anims/stump_hit_right = SubResource( 12 )

[node name="TreeBreak" type="CPUParticles2D" parent="."]
material = SubResource( 15 )
position = Vector2( -130, -8 )
emitting = false
amount = 12
lifetime = 1.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 64, 20 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 60 )
initial_velocity = 45.0
initial_velocity_random = 0.45
angular_velocity = 93.13
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
angle = 180.0
angle_random = 1.0
scale_amount = 5.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="TreeBreak2" type="CPUParticles2D" parent="."]
material = SubResource( 18 )
position = Vector2( 120, -8 )
emitting = false
amount = 10
lifetime = 1.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 64, 12 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 80 )
initial_velocity = 45.0
initial_velocity_random = 0.45
orbit_velocity_random = 1.0
angle_random = 1.0
scale_amount = 3.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="SoundEffectsTree" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0

[node name="SoundEffectsStump" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0

[connection signal="area_entered" from="StumpHurtBox" to="." method="_on_stumpHurtBox_area_entered"]
[connection signal="area_entered" from="TreeHurtbox" to="." method="_on_Hurtbox_area_entered"]
